<resources>
    <string name="app_name">STSCardDemo</string>
    <string name="change_address">更改服务器</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_operator">输入操作员账号</string>
    <string name="prompt_password">输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="first_open_app_and_have_net">(ง •̀_•́)ง  正在给您加载精彩内容...</string>
    <string name="first_open_app_and_not_net">(ಥ _ ಥ)  没有网络了...</string>
    <string name="sencond_open_app_and_have_net">O(∩_∩)O  网络已连接...</string>
    <string name="please_speak">请说话</string>
    <string name="speaking">说话中</string>
    <string name="cancel">取消</string>
    <string name="start">开始</string>
    <string name="start_dialog">调用语音识别对话框</string>
    <string name="status">状态：</string>
    <string name="tofinish">说完</string>
    <string name="in_recog">正在识别</string>
    <string name="finished">完成:</string>
    <string name="error_occur">出错: 0x%1$s</string>
    <string name="error_start">启动失败: 0x%1$s</string>
    <string name="is_canceled">已取消</string>
    <string name="try_again">重试</string>
    <string name="volume">音量</string>
    <string name="start_tune">开始音</string>
    <string name="end_tune">结束音</string>
    <string name="setting">设置</string>
    <string name="choose_prop_type">请选择垂直领域类型：</string>
    <string name="choose_language">请选择识别语言：</string>
    <string name="choose_dialog_theme">请选择识别对话框样式：</string>
    <string name="play_start_sound">播放开始音</string>
    <string name="play_end_sound">播放结束音</string>
    <string name="dialog_tips_sound">对话框提示音</string>
    <string name="show_vol">显示识别音量</string>
    <string name="use_default_audio_source">使用麦克风输入</string>
    <string name="nlp">启用语义解析</string>
    <string name="more">更多示例</string>
    <string name="view_html">点击查看Html效果</string>
    <string name="activity_label_dialog_tips">识别对话框提示语</string>
    <string name="activity_label_api">Api方式识别</string>
    <string name="activity_desc_api">开发者可以自定义识别的UI</string>
    <string name="activity_label_external">外部音频识别</string>
    <string name="activity_desc_external">不使用麦克风录音，使用外部音频识别。只支持PCM16位单声道音频。采样率16K或者8K</string>
    <string name="activity_label_nlu">语义理解示例</string>
    <string name="activity_desc_nlu">将语音转换为意图</string>
    <string name="dialog_show_tips_onstart">启动时显示提示列表</string>
    <string name="dialog_show_tips_onstart_summary">语音识别对话框展示后，不启动识别，首先展示提示列表，需要用户手工点击开始按钮</string>
    <string name="dialog_show_tip_onsilent">静音时显示一条提示</string>
    <string name="dialog_show_tip_onsilent_summary">识别启动后，如果3秒没有检测到语音起点，在声音动效下方显示一条提示语</string>
    <string name="dialog_show_help_onsilent">静音异常时显示帮助按钮</string>
    <string name="dialog_show_help_onsilent_summary">由于没有检测到用户语音，超时异常后将取消按钮替换为帮助按钮</string>
    <string name="photoPickerNotFoundText">文件没有找到</string>
    <string-array name="prop_tpye">
        <item>输入</item>
        <item>热词</item>
        <item>地图</item>
        <item>音乐</item>
        <item>视频</item>
        <item>应用</item>
        <item>网页</item>
        <item>健康</item>
        <item>购物</item>
        <item>打电话</item>
    </string-array>
    <string-array name="languages">
        <item>普通话(中国)</item>
        <item>粤语(中国)</item>
        <item>英语(美国)</item>
    </string-array>
    <string-array name="dialog_theme">
        <item>暗蓝</item>
        <item>亮蓝</item>
        <item>暗绿</item>
        <item>亮绿</item>
        <item>暗橙</item>
        <item>亮橙</item>
        <item>暗红</item>
        <item>亮红</item>
    </string-array>
    <string-array name="command_tips">
        <item>北京天气怎么样</item>
        <item>打电话给移动客服</item>
        <item>北京到上海的飞机票</item>
        <item>讲个笑话</item>
        <item>百度大厦怎么走</item>
    </string-array>

    <string-array name="bill_info">
        <item></item>
    </string-array>
    <string name="OperatorAccount">操作员账号</string>
    <string name="OperatorBill">账单</string>
    <string name="OperatorBalance">余额</string>
    <string name="ConnectPrinter">连接打印机</string>
    <string name="Settings">设置</string>


    <string name="Home">首页</string>
    <string name="page_operator">操作员</string>

    <string name="Cancel">取消</string>
    <string name="OK">确定</string>
    <string name="failed">失败</string>
    <string name="success">成功</string>
    <string name="error">错误</string>
    <string name="prompting">提示</string>
    <string name="connect">连接</string>
    <string name="ConfirmExit">确认退出</string>

    <string name="MoneyUnit">元</string>
    <string name="VolumeUnit">m3</string>
    <string name="watervolume">水量</string>
    <string name="measureparam">表计控制字</string>
    <string name="calculateparam">结算控制字</string>
    <string name="totalusage">累计使用</string>
    <string name="totalbuy">累计购买</string>
    <string name="leftval">剩余</string>
    <string name="measuremoney">走金额</string>
    <string name="measurevolue">走量</string>

    <string name="setServerAddress">设置服务器地址</string>
    <string name="ServerPort">端口号</string>
    <string name="ServerAddress">服务器地址</string>
    <string name="btn_Save">保存</string>
    <string name="SaveSuccess">保存成功</string>
    <string name="SaveFailure">保存失败</string>
    <string name="btn_upload">上传</string>
    <string name="btn_export">导出</string>
    <string name="downloadTask">下载任务</string>
    <string name="page_search">搜索</string>
    <string name="btn_settings">设置</string>
    <string name="OperationFail">操作失败</string>
    <string name="OperationSuccess">操作成功</string>

    <string name="SDCardUnavail">SD卡不可用，无法保存数据</string>
    <string name="SCCardLackSpace">SD卡空间不足</string>
    <!--连接蓝牙-->
    <string name="State">状态</string>
    <string name="deviceConnState_Connected">已经连接</string>
    <string name="deviceConnState_NotConnected">未连接</string>
    <string name="BluetoothDevice">蓝牙设备</string>
    <string name="btn_bundbluedevice">绑定设备</string>
    <string name="conndevice">确定连接设备</string>
    <string name="reconnect">重新连接</string>
    <string name="connopen">连接成功</string>
    <string name="searchfinished">搜索完成.</string>
    <string name="nosearchdevice">没有搜索到蓝牙设备</string>
    <string name="search">搜索蓝牙设备</string>
    <string name="rescan">重新搜索</string>
    <string name="stopscan">停止搜索</string>

    <!--登陆-->
    <string name="AreaName">公司名称</string>
    <string name="StationName">站点</string>
    <string name="UID">账号</string>
    <string name="InputUIDHint">输入操作员账号</string>
    <string name="InputPWDHint">输入密码</string>
    <string name="InputUID">请输入操作员账号.</string>
    <string name="InputPWD">请输入密码.</string>
    <string name="RemeberPWD">记住密码</string>
    <string name="AutoLogin">自动登录</string>
    <string name="LoginSuccess">登录成功</string>
    <string name="LoginFailed">登录失败</string>
    <string name="NetError">网络连接错误.</string>
    <string name="ConnectServerError">连接服务器失败.</string>
    <string name="UIDNotExist">操作员账户不存在.</string>
    <string name="PWDError">密码错误.</string>
    <string name="OperatorLocked">操作员已经被锁定.</string>
    <string name="NotLogin">尚未登陆.</string>
    <string name="LoginFirst">请先登录</string>
    <string name="btn_login">登陆</string>
    <string name="btn_logout">退出登陆</string>

    <!-- 关于我们-->
    <string name="CompanyAddress">地址：杭州市西湖区浙大科技园A楼西区621-623室</string>
    <string name="CompanyEmail">邮箱：sales@laisontech.com</string>
    <string name="CompanyName">杭州莱宸科技有限公司</string>
    <string name="CompanySite">网站：http://www.laisontech.com</string>
    <string name="CompanyTelphone">电话：+86-571-89715426</string>
    <string name="aboutUs">关于我们</string>
    <string name="clearCache">清除数据</string>
    <!-- 更新任务-->
    <string name="lastUpdateTaskDate">上次更新时间</string>
    <string name="updateTask">更新任务</string>
    <string name="NoTask">无任务</string>
    <string name="getTaskInfoFailed">获取任务文件信息失败</string>
    <string name="serverTaskfile">服务端的任务文件信息</string>
    <string name="taskCreateDate">创建日期</string>
    <string name="taskLength">长度</string>
    <string name="whetherCovered">是否覆盖</string>
    <!--广播校时-->
    <string name="synchronizingTime">广播校时</string>
    <string name="useCurrTime">使用系统时间</string>
    <!-- 抄表-->
    <string name="AutoReadingMeter">自动抄表</string>
    <string name="InReadingMeter">正在抄表...</string>
    <string name="NoRecord">此操作员无抄表记录</string>
    <string name="StartAutoReadingFailed">启动自动抄表失败</string>
    <string name="startReading">开始抄表</string>

    <string name="meteraddress">表通信地址</string>
    <string name="readcurdata">读当前数据</string>
    <string name="timing">校时</string>
    <string name="openvalve">开阀</string>
    <string name="closevalve">关阀</string>
    <string name="communication">唤醒</string>
    <string name="Stopcommunication">停止通讯</string>
    <string name="readfreezedata">读冻结数据</string>
    <string name="openvlvesuc">开阀成功</string>
    <string name="openvalvefalse">开阀失败</string>
    <string name="closevalvesuc">关阀成功</string>
    <string name="closevalvefasle">关阀失败</string>
    <string name="timingsuc">校时成功</string>
    <string name="timingfalse">校时失败</string>
    <string name="readcurdatasuc">读当前数据成功</string>
    <string name="readcurdatafalse">读当前数据失败</string>
    <string name="readhistorysuc">读冻结数据成功</string>
    <string name="readhistoryfalse">读冻结数据失败</string>

    <string name="cannotbeempty">表通信地址不能为空</string>
    <string name="bluere_enter">表通信地址错误，请重新输入</string>
    <string name="connerror">蓝牙连接错误，请重新连接</string>
    <string name="recrefuseframe">收到拒绝帧</string>
    <string name="intervaltoshort">等待回复</string>
    <string name="pleaseselectdevice">请先选择蓝牙设备</string>
    <string name="BuildSendFrameFail">构建发送帧失败</string>
    <string name="parsecurdatafail">解析当前数据失败</string>
    <string name="parsefreezedatafail">解析冻结数据失败</string>
    <string name="ValveControl">阀门控制</string>
    <string name="RealTimeTask">实时通信任务</string>
    <string name="parseframefail">解析帧失败</string>
    <string name="meteraddis">表通信地址为：</string>
    <string name="UpdateKey">更新密钥</string>
    <string name="Update">更新</string>
    <string name="TaskState">任务状态</string>
    <string name="InProcess">进行中</string>
    <string name="CommunicationError">通信失败</string>
    <string name="CommunicationSuccess">通信成功</string>
    <string name="TimeOut">通信超时</string>
    <string name="AccessDenied">收到拒绝帧</string>
    <string name="Finished">完成</string>
    <string name="Unstarted">未开始</string>
    <string name="CurrentCollected">当前已采集</string>
    <string name="FileNotExist">尚未保存表定位信息</string>
    <string name="MeterLocationNull">表定位信息不能为空</string>
    <string name="SaveLocation">保存表定位信息</string>
    <string name="UploadResult">上传抄表结果</string>
    <string name="lastUploadNum">上次上传数量</string>
    <string name="latitude">纬度</string>
    <string name="longitude">经度</string>
</resources>
